# interview-at

./: .gitignore  README.md  pyproject.toml
data/: BTCUSDT-1h-2023-01.csv  BTCUSDT-1h-2023-02.csv  BTCUSDT-1h-2023-03.csv  BTCUSDT-1h-2023-04.csv  BTCUSDT-1h-2023-05.csv  columns.txt
notebooks/: kmeans.ipynb  pytorch.ipynb
src/interview_at/: __init__.py
