[project]
name = "interview-at"
version = "0.1.0"
description = "Add a short description here"
dependencies = ["numpy~=1.24.3", "pandas~=2.0.1", "jupyterlab~=4.0.0"]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = ["black~=23.3.0", "isort~=5.12.0", "ruff~=0.0.269"]

[tool.hatch.metadata]
allow-direct-references = true

[tool.rye.scripts]
lint = { chain = ["lint:black", "lint:isort"]}
"lint:black" = "black src notebooks"
"lint:isort" = "isort --profile black src notebooks"

test = "ruff src notebooks"
